--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
